added about para

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Laura Seal. It uses data from mapbox.api and darksky</p>
         <img src="img/profileImage.png" class="portrait" alt="Picture of me">
     </div>
     {{>footer}}
